--- a/markdown/pandoc.template
+++ b/markdown/pandoc.template
@@ -335,6 +335,7 @@ $endif$
 \newcommand{\thenumber}{$номер$}
 
 \usepackage{geometry}
+\geometry{legalpaper, portrait, margin=0.75in}
 
 \usepackage{fontspec}
 \setmainfont{DejaVu Serif}
